--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -9,6 +9,8 @@
 <body>
     <div class="container">
         {% block content %}{% endblock %}
+        <a href="/books" class="btn btn-secondary">Böcker</a>
+        <a href="/books_form" class="btn btn-secondary">Form</a>
     </div>
 </body>
 </html>
