--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,3 +1,4 @@
+{% block header %}{% include "navbar.html" %}{% endblock %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -32,6 +33,9 @@
             </div>
             <div class="carousel-item">
                   <img src="{{ url_for('static', filename='/books.jpg') }}" class="d-block w-1" alt="...">
+              </div>
+            <div class="carousel-item">
+                  <img src="{{ url_for('static', filename='/movie.jpg') }}" class="d-block w-1" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
