--- a/application/templates/anything.html
+++ b/application/templates/anything.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Slumpmässig Aktivitet</h1>
         <p>Här är en slumpmässig aktivitet du kan prova:</p>
-        <p>{{ anything }}</p>
+        <p>{{ anything_suggestion }}</p>
         <a href="/anything" class="btn btn-primary">Nästa Slumpmässiga Aktivitet</a>
     </div>
 </body>
