ny icon i navbar som heter "anything"

--- a/application/templates/navbar.html
+++ b/application/templates/navbar.html
@@ -9,6 +9,7 @@
           <a class="nav-link active" aria-current="page" href="books">Books</a>
           <a class="nav-link" href="badplatser">Beaches</a>
           <a class="nav-link" href="film">Movies</a>
+          <a class="nav-link" href="anything">Anything</a>
         </div>
       </div>
     </div>
