--- a/application/templates/anything.html
+++ b/application/templates/anything.html
@@ -5,13 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slumpmässig Aktivitet</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+
+    <style>
+        
+        .container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 10vh;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>Slumpmässig Aktivitet</h1>
-        <p>Här är en slumpmässig aktivitet du kan prova:</p>
+        <h1>Random Activity</h1>
+        <p>Here's a random activity you can try:</p>
         <p>{{ anything_suggestion }}</p>
-        <a href="/anything" class="btn btn-primary">Nästa Slumpmässiga Aktivitet</a>
+        <a href="/anything" class="btn btn-primary">Next Random Activity</a>
     </div>
 </body>
 </html>
