--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -37,6 +37,9 @@
             <div class="carousel-item">
                   <img src="{{ url_for('static', filename='/movie.jpg') }}" class="d-block w-1" alt="...">
               </div>
+              <div class="carousel-item">
+                <img src="{{ url_for('static', filename='/excited.jpg') }}" class="d-block w-1" alt="...">
+            </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
