--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -12,5 +12,7 @@
         <a href="/books" class="btn btn-secondary">Böcker</a>
         <a href="/books_form" class="btn btn-secondary">Form</a>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
