--- a/application/templates/film.html
+++ b/application/templates/film.html
@@ -25,6 +25,6 @@
         <p><strong>Director:</strong> {{ movie_info['Director'] }}</p>
         <p><strong>Actors:</strong> {{ movie_info['Actors'] }}</p>
         <p><strong>Plot:</strong> {{ movie_info['Plot'] }}</p>
-    {% endif }
+    {% endif %}
 </body>
 </html>
