--- a/application/templates/film.html
+++ b/application/templates/film.html
@@ -4,6 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <title>Movie Viewer</title>
 </head>
 <body>
