--- a/application/templates/books_form.html
+++ b/application/templates/books_form.html
@@ -19,4 +19,7 @@ Få böcker efter ämne
 
 {{data | safe}}
 
+<a href="/books" class="btn btn-secondary">Böcker</a>
+<a href="/books_form" class="btn btn-secondary">Form</a> 
+
 {% endblock %}
