--- a/application/templates/books.html
+++ b/application/templates/books.html
@@ -1,3 +1,4 @@
+{% block header %}{% include "navbar.html" %}{% endblock %}
 {% extends "layout.html" %}
 
 {% block title %}
@@ -5,14 +6,17 @@ books
 {% endblock %}
 
 {% block content %}
-<h3>En bök att läsa 👑</h3>
+<h3>En bok att läsa 👑</h3>
     <div class="alert alert-primary" role="alert">
         <p><img src="{{ cover }}"></p>
         <p>Titel: {{ title }}</p>
         <p>Förtfattare: {{ author }}</p>
-        <p>{{ downloads_number }} personer har laddat ned böcken!</p>
+        <p>{{ downloads_number }} personer har laddat ned boken!</p>
     </div>
     <div class="alert alert-warning" role="alert">
         <p><a href="{{ read_link }}">Ladda ned nu!</a></p>
     </div>
+
+    <a href="/books" class="btn btn-secondary">Annan bok</a>
+    <a href="/books_form" class="btn btn-secondary">Form</a>
 {% endblock %}
