--- a/application/templates/badplats.html
+++ b/application/templates/badplats.html
@@ -10,7 +10,7 @@ Badplatser
     <h2>Whatodos förslag: </h2>
     {{ random_beach|safe }}
 
-    <form action="/" method="post">
+    <form action="/badplatser" method="post">
         <label for="stadsdel">Hitta badplatser för vald stadsdel</label><br/>
         <select class="form-select" aria-label="Default select example" name="selected_search">
               <option selected>Välj stadsdel</option>
