--- a/application/templates/anything.html
+++ b/application/templates/anything.html
@@ -1,6 +1,5 @@
 {% block header %}{% include "navbar.html" %}{% endblock %}
 
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,24 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slumpmässig Aktivitet</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-
-    <style>
-        
-        .container {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            min-height: 10vh;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='anything.css') }}">
 </head>
 <body>
     <div class="container">
-        <h1>Random Activity</h1>
-        <p>Here's a random activity you can try:</p>
-        <p>{{ anything_suggestion }}</p>
-        <a href="/anything" class="btn btn-primary">Next Random Activity</a>
+        <div class="center">
+
+            
+            <img src="{{ url_for('static', filename='any.jpg') }}" alt="Charity Image" class="" width="100%">
+            <p class="txt">Here's a random activity you can try:</p>
+            <p class="bold">{{ anything_suggestion }}</p>
+          <div class="center">
+              <center>
+                  <a href="/anything" class="btn btn-primary">Next Random Activity</a>
+                </center>
+
+            </div>
+            
+        </div>
     </div>
 </body>
 </html>
+
