--- a/application/templates/books.html
+++ b/application/templates/books.html
@@ -16,5 +16,7 @@ books
     <div class="alert alert-warning" role="alert">
         <p><a href="{{ read_link }}">Ladda ned nu!</a></p>
     </div>
+    <a href="/books" class="btn btn-secondary">Böcker</a>
+    <a href="/books_form" class="btn btn-secondary">Form</a> 
     
 {% endblock %}
