--- a/application/templates/film.html
+++ b/application/templates/film.html
@@ -65,14 +65,20 @@
                 <form id="movieForm" method="POST" action="/film">
                     <label for="movie_name">Random movie:</label>
                     <name="movie_name" id="movie_name" required>
-                        <button type="submit">Next</button>
+                        <button type="submit" onclick="setCookie()">Next</button>
                     </form>
-                    <!--form id="movieSearchForm" method="POST" action="/film">
-                        <label for="smovie_name">Search for a movie:</label>
-                        <input type="text" name="smovie_name" id="smovie_name" required>
-                        <button type="submit">Search</button>
-                    </form (potential search function for the future)-->
-                </form>
+                    <script>
+                        var count = parseInt(getCookie("count")) || 0;
+                        function setCookie() {
+                            count++;
+                            document.cookie = "count=" + count + "; expires=Fri, 03 Nov 2023 23:59:59 CET; path=/";
+                        }
+                        function getCookie(name) {
+                            var value = "; " + document.cookie;
+                            var parts = value.split("; " + name + "=");
+                            if (parts.length === 2) return parts.pop().split(";").shift();
+                        }
+                    </script>
             </div>
             <!-- Return from API -->
             {% if movie_info %}
